bpk-lib/crates/macbat/macros/tests/trybuild_negative/event_missing_key.rs
use macbat::Event;
#[derive(Event)]
#[batpak(category = 1)]
struct E {
    a: u8,
}
fn main() {}
